--- a/src/index.html
+++ b/src/index.html
@@ -5,13 +5,12 @@
     <title></title>
   </head>
   <body>
-    <textarea id="input">{
+    <textarea id="input">
+   {
      "id": "ezeb2fve0b",
      "code": 10,
      "message": "404 Error coffee not found"
-}</textarea>
-<hr>
-    <pre id="arr"></pre>
-
+   }</textarea>
+    <hr>
   </body>
 </html>
